--- a/.gitignore
+++ b/.gitignore
@@ -48,7 +48,6 @@ ExportedObj/
 *.VC.db
 
 # Unity3D generated meta files
-*.meta
 
 # Unity3D generated file on crash reports
 sysinfo.txt
@@ -71,4 +70,4 @@ crashlytics-build.properties
 
 
 .vscode
-*.asset
+*.blend1
